--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-/docker/logs
+.docker/config/logs
 .env
 .idea
 docker-compose.override.yml
+/source
+.DS_Store
+.docker-sync
+docker-sync.yml
+/database
+docker.cnf
+pool.conf
+default.conf
+certificate.cnf
+certificate.crt
+certificate.key
+php.ini
+id_rsa
+id_rsa.pub
+known_hosts
+*.log
