--- a/.docker/config/php/php.ini.dist
+++ b/.docker/config/php/php.ini.dist
@@ -1,7 +1,7 @@
 short_open_tag = On
 date.timezone = UTC
 error_log = /proc/self/fd/2
-upload_max_filesize = 500M
+upload_max_filesize = 10M
 post_max_size = 10M
 max_input_vars = 2048
 xdebug.default_enable = 0
@@ -9,3 +9,4 @@ xdebug.remote_enable = 0
 xdebug.remote_connect_back = 1
 xdebug.remote_host = localhost
 xdebug.remote_port = 9000
+memory_limit = 2G
