--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,50 @@
-version: "3.4"
+version: "3.7"
 
 services:
-    app:
-        build: docker
-        volumes:
-            - ./source:/var/www/source
+  mariadb:
+    container_name: mariadb_service
+    image: mariadb:10
+    environment:
+      MYSQL_ROOT_PASSWORD: ${PASSWORD_ROOT_MYSQL}
+    ports:
+      - 3306:3306
+    volumes:
+      - '.docker/config/mysql/docker.cnf:/etc/mysql/conf.d/docker.cnf'
+      - 'database-sync:/var/tmp/database'
+    networks:
+      docker-server:
+        ipv4_address: 172.28.0.2
+
+  mailhog:
+    container_name: mailhog_service
+    image: mailhog/mailhog
+    ports:
+      - 1025:1025
+      - 8025:8025
+    networks:
+      docker-server:
+        ipv4_address: 172.28.0.3
+
+  redis:
+    container_name: redis_service
+    image: redis
+    ports:
+      - 6379:6379
+    networks:
+      docker-server:
+        ipv4_address: 172.28.0.5
+  
+  redis-commander:
+    container_name: redis_commander_service
+    image: rediscommander/redis-commander:latest
+    depends_on:
+      - redis
+    links:
+      - redis
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - "8081:8081"
+    networks:
+      docker-server:
+        ipv4_address: 172.28.0.6
